[gd_scene load_steps=7 format=2]

[ext_resource path="res://Images/Background/background.png" type="Texture" id=1]
[ext_resource path="res://font/SparkyStonesRegular-BW6ld.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/hover_button_menu.tres" type="StyleBox" id=3]
[ext_resource path="res://scenes/menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 5
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 2 )

[node name="menu" type="Node2D"]
script = ExtResource( 4 )

[node name="fond" type="Sprite" parent="."]
position = Vector2( 500.25, 298 )
scale = Vector2( 1.02197, 1 )
texture = ExtResource( 1 )

[node name="label_titre" type="Label" parent="."]
margin_left = 114.0
margin_top = 68.0
margin_right = 925.0
margin_bottom = 161.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Great Wise Medecin"

[node name="button_commencer" type="Button" parent="."]
margin_left = 262.0
margin_top = 233.0
margin_right = 762.0
margin_bottom = 305.0
custom_colors/font_color_focus = Color( 0.239216, 0.219608, 0.219608, 1 )
custom_colors/font_color = Color( 0.239216, 0.219608, 0.219608, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Commencer une partie"

[node name="button_quitter" type="Button" parent="."]
margin_left = 262.0
margin_top = 440.0
margin_right = 762.0
margin_bottom = 512.0
custom_colors/font_color_focus = Color( 0.239216, 0.219608, 0.219608, 1 )
custom_colors/font_color = Color( 0.239216, 0.219608, 0.219608, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Quitter"

[node name="button_parametre" type="Button" parent="."]
margin_left = 262.0
margin_top = 335.0
margin_right = 762.0
margin_bottom = 407.0
custom_colors/font_color_focus = Color( 0.239216, 0.219608, 0.219608, 1 )
custom_colors/font_color = Color( 0.239216, 0.219608, 0.219608, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Parametre"

[connection signal="pressed" from="button_commencer" to="." method="_on_button_commencer_pressed"]
[connection signal="pressed" from="button_quitter" to="." method="_on_button_quitter_pressed"]
[connection signal="pressed" from="button_parametre" to="." method="_on_button_parametre_pressed"]
